--- a/Register.Infrastructure/Register.Infrastructure.csproj
+++ b/Register.Infrastructure/Register.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
     <PackageReference Include="Scrutor" Version="6.1.0" />
   </ItemGroup>
 
