--- a/Register/Clientapp/package.json
+++ b/Register/Clientapp/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
